Bug 1172719 - Fix SharedSurface fence handling on gonk r=jgilbert,nical