gfx/layers/client/TextureClientSharedSurface.cpp
@@ -13,6 +13,10 @@
 #include "nsThreadUtils.h"
 #include "SharedSurface.h"
 
+#ifdef MOZ_WIDGET_GONK
+#include "SharedSurfaceGralloc.h"
+#endif
+
 namespace mozilla {
 namespace layers {
 
@@ -39,6 +43,67 @@ bool
 SharedSurfaceTextureClient::ToSurfaceDescriptor(SurfaceDescriptor& aOutDescriptor)
 {
   return mSurf->ToSurfaceDescriptor(&aOutDescriptor);
+}
+
+void
+SharedSurfaceTextureClient::SetReleaseFenceHandle(const FenceHandle& aReleaseFenceHandle)
+{
+#ifdef MOZ_WIDGET_GONK
+  SharedSurface_Gralloc* surf = nullptr;
+  if (mSurf->mType == SharedSurfaceType::Gralloc) {
+    surf = SharedSurface_Gralloc::Cast(mSurf.get());
+  }
+  if (surf && surf->GetTextureClient()) {
+    surf->GetTextureClient()->SetReleaseFenceHandle(aReleaseFenceHandle);
+    return;
+  }
+#endif
+  TextureClient::SetReleaseFenceHandle(aReleaseFenceHandle);
+}
+
+FenceHandle
+SharedSurfaceTextureClient::GetAndResetReleaseFenceHandle()
+{
+#ifdef MOZ_WIDGET_GONK
+  SharedSurface_Gralloc* surf = nullptr;
+  if (mSurf->mType == SharedSurfaceType::Gralloc) {
+    surf = SharedSurface_Gralloc::Cast(mSurf.get());
+  }
+  if (surf && surf->GetTextureClient()) {
+    return surf->GetTextureClient()->GetAndResetReleaseFenceHandle();
+  }
+#endif
+  return TextureClient::GetAndResetReleaseFenceHandle();
+}
+
+void
+SharedSurfaceTextureClient::SetAcquireFenceHandle(const FenceHandle& aAcquireFenceHandle)
+{
+#ifdef MOZ_WIDGET_GONK
+  SharedSurface_Gralloc* surf = nullptr;
+  if (mSurf->mType == SharedSurfaceType::Gralloc) {
+    surf = SharedSurface_Gralloc::Cast(mSurf.get());
+  }
+  if (surf && surf->GetTextureClient()) {
+    return surf->GetTextureClient()->SetAcquireFenceHandle(aAcquireFenceHandle);
+  }
+#endif
+  TextureClient::SetAcquireFenceHandle(aAcquireFenceHandle);
+}
+
+const FenceHandle&
+SharedSurfaceTextureClient::GetAcquireFenceHandle() const
+{
+#ifdef MOZ_WIDGET_GONK
+  SharedSurface_Gralloc* surf = nullptr;
+  if (mSurf->mType == SharedSurfaceType::Gralloc) {
+    surf = SharedSurface_Gralloc::Cast(mSurf.get());
+  }
+  if (surf && surf->GetTextureClient()) {
+    return surf->GetTextureClient()->GetAcquireFenceHandle();
+  }
+#endif
+  return TextureClient::GetAcquireFenceHandle();
 }
 
 } // namespace layers
